--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -2,6 +2,7 @@
     border-bottom: 2px solid #800000; 
     border-radius: 5px;  
     color: #800000; 
+    /* background-color: #85858590; */
 }
 
 .nav_link {
@@ -10,4 +11,6 @@
 .nav_link :hover + .arrow-icons{
     display: block !important;
 }
+
+
 
