--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,9 +1,10 @@
 .active{
-    border-bottom: 2px solid #800000; 
+    border-bottom: 2px solid #F2DF93; 
     border-radius: 5px;  
-    color: #800000; 
-    /* background-color: #85858590; */
+    color: #F2DF93; 
+    /* background-color: #d9d9d975; */
 }
+
 
 .nav_link {
     display: block !important;
